act34/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ???
  namespace: monitoring
spec:
  selector:
    app: ???
  ports:
  - protocol: TCP
    port: ???
    targetPort: ???
  type: ???
