act34/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # TODO: Define el nombre del Ingress
  name: ???
  namespace: monitoring
  annotations:
    # TODO: Define el Ingress class (ej: alb para AWS Load Balancer Controller)
    kubernetes.io/ingress.class: ???
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # TODO: Nombre del Service al que apunta este Ingress
            name: ???
            port:
              # TODO: Puerto del Service
              number: ???
